[package]
name = "resume-backend"
authors = ["Misonoi"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
actix-web = "4"
actix-cors = "0.7.0"
anyhow = "1"
thiserror = "1"
rand = "0.8.5"
lazy_static = "1"
diesel = { version = "2.1.4", features = ["mysql", "chrono"] }
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4.31", features = ["serde"] }
redis = { version = "0.24.0" }
lettre = {  version = "0.11.3", features = ["native-tls"] }
native-tls = "0.2.11"
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
sha256 = "1.5.0"